--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Vinay Somawat</title>
+      <title>Abhishek N N</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+      <meta name="description" content="Portfolio webpage of Abhishek N N" />
       <meta name="keywords"
           content="portfolio,website,personal website,github,projects,computer science and engineering" />
       <meta name="author" content="Vinay Somawat" />
@@ -47,8 +47,7 @@
                   <div class="author-img">
                      <img src="images/logo.png">
                   </div>
-                  <h1 id="colorlib-logo"><a href="./index.html">Vinay
-                        Somawat</a>
+                  <h1 id="colorlib-logo"><a href="./index.html">Abhishek N N</a>
                   </h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar"
@@ -82,12 +81,7 @@
                          data-animate-effect="fadeInLeft">
                         <div class="about-desc">
                            <h1>About</h1>
-                           <p>Hi &#128075; <br>I'm Vinay Somawat. I’m currently
-                              working as
-                              a
-                              <b>Software Engineer at Biofourmis India</b> specialized in
-                              <b>JavaScript Applications</b>. I did my undergrad
-                              in CS from <b>NIT Warangal</b>.
+                           <p>I'm Abhishek N N. I’m currently studying Computer Science and Engineering in Vellore Institute of Technology Chennai.
                            </p>
                            <p>I'm a <b>developer</b>, geek and curious human
                               besides being an OpenSource enthusiast. I have
