--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                         <li><a href="#" data-nav-section="skills">Skills</a>
                         </li>
                         <li><a href="#" data-nav-section="projects">Projects</a>
-                        </li>
+                        <!-- </li>
                         <li><a href="#" data-nav-section="blogs">Blogs</a>
-                        </li>
+                        </li> -->
                         <li><a href="#" data-nav-section="experience">Work
                               Experience</a></li>
                         <li><a href="#"
@@ -81,12 +81,12 @@
                          data-animate-effect="fadeInLeft">
                         <div class="about-desc">
                            <h1>About</h1>
-                           <p>I'm Abhishek N N. I’m currently studying Computer Science and Engineering in Vellore Institute of Technology Chennai.
+                           <p> &emsp; &emsp; Hi &#128075;  I'm Abhishek N N. I’m currently studying <b>B.Tech Computer Science and Engineering</b> in <b>Vellore Institute of Technology, Chennai</b>.
                            </p>
-                           <p>I'm a <b>developer</b>, geek and curious human
+                           <!-- <p>I'm a <b>developer</b>, geek and curious human
                               besides being an OpenSource enthusiast. I have
                               experience of delivering solutions for interesting
-                              problems from startup and industry space.</p>
+                              problems from startup and industry space.</p> -->
                            <p class="finalText">I love to cook and travel.</p>
                         </div>
                      </div>
@@ -158,7 +158,7 @@
                </section>
                <!--------------------[END] Projects---------------------------->
                <!--------------------[START] Blogs----------------------------->
-               <section class="colorlib-blogs no-print" data-section="blogs">
+               <!-- <section class="colorlib-blogs no-print" data-section="blogs">
                   <div class="colorlib-narrow-content">
                      <div class="row row-bottom-padded-sm animate-box"
                          data-animate-effect="fadeInLeft">
@@ -181,7 +181,7 @@
                         </a>
                      </ul>
                   </div>
-               </section>
+               </section> -->
                <!--------------------[END] Blogs------------------------------->
                <!--------------------[START] Work Experience------------------->
                <section class="colorlib-experience" data-section="experience">
@@ -221,10 +221,10 @@
                         <div class="about-desc">
                            <h1>Contact</h1>
                         </div>
-                        <p>If you would like to get in touch with me, be it for
-                           exploring a technology, a business, or to just say
-                           hi, feel free to send me an email at
-                           vinaysomawat40@gmail.com
+                        <p>
+                           <a href="mailto:7abhisheknn@gmail.com">7abhisheknn@gmail.com</a></br>
+                           <a href="https://www.linkedin.com/in/abhisheknn/">LinkedIn</a></br>
+                           <a href="https://github.com/7abhisheknn">GitHub</a></br>
                         </p>
                      </div>
                   </div>
