--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 class="border js-fullheight no-print">
                <div class="text-center">
                   <div class="author-img">
-                     <img src="images/logo.png">
+                     <img src="images/photo.jpeg">
                   </div>
                   <h1 id="colorlib-logo"><a href="./index.html">Abhishek N N</a>
                   </h1>
@@ -128,20 +128,20 @@
                         </li>
                         <li>
                            <div class="link">
-                              <p style="margin-bottom: 0px">Software Projects
-                              </p>
-                              <i class="fa fa-chevron-down"></i>
-                           </div>
-                           <ul id="software-projects" class="submenu">
-                           </ul>
-                        </li>
-                        <li>
-                           <div class="link">
                               <p style="margin-bottom: 0px">Android Projects
                               </p>
                               <i class="fa fa-chevron-down"></i>
                            </div>
                            <ul id="android-projects" class="submenu">
+                           </ul>
+                        </li>
+                        <li>
+                           <div class="link">
+                              <p style="margin-bottom: 0px">Software Projects
+                              </p>
+                              <i class="fa fa-chevron-down"></i>
+                           </div>
+                           <ul id="software-projects" class="submenu">
                            </ul>
                         </li>
                         <li>
