--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                      <li><a href="#" data-nav-section="education">Education</a></li>
                      <li><a href="#" data-nav-section="contact">Contact</a>
                      <li><a href="http://localhost/7abhisheknn.github.io/php/signup.php">Sign Up</a>
-                     <li><a href="#" data-nav-section="contact">Sign In</a>
-                        <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
+                     <li><a href="http://localhost/7abhisheknn.github.io/php/login.php">Sign In</a>
                      </li>
                   </ul>
                </div>
